# spacelaser

./: .Rbuildignore  .gitignore  404.html  Cargo.toml  DESCRIPTION  LICENSE  LICENSE.html  NAMESPACE  README.Rmd  README.md  _pkgdown.yml  authors.html  authors.md  index.html  index.md  llms.txt  pkgdown.yml  remote-hdf5-partial-read-analysis.html  remote-hdf5-partial-read-analysis.md  search.json  sitemap.xml
.claude/: settings.local.json
.github/workflows/: R-CMD-check.yaml  pkgdown.yaml  test-coverage.yaml
R/: auth.R  columns.R  extendr-wrappers.R  gedi.R  hdf5.R  icesat2.R  search.R  spacelaser-package.R  utils.R  waveforms.R  zzz.R
articles/: gedi-l1b-waveforms.html  gedi-l1b-waveforms.md  index.html  index.md
benchmarks/: .gitignore  BENCHMARK-RESULT.Rmd  BENCHMARK-RESULT.md  README.md  bench-hdf5r.R  bench-spacelaser.R  compare.R  equivalence.R  run.sh  search.R  setup.R
benchmarks/python/: bench_h5coro.py  pyproject.toml
benchmarks/python-gedidb/: bench_gedidb.py  pyproject.toml
benchmarks/results/: 2026-04-15-082141.csv  2026-04-15-094134.csv  2026-04-15-105605.csv  2026-04-15-110838.csv  2026-04-15-114633.csv
data-raw/: generate-fixtures.R
data-raw/fixtures/: _helpers.R  gedi-l1b.R  gedi-l2a.R  gedi-l2b.R  gedi-l4a.R  gedi-l4c.R  icesat2-atl03.R  icesat2-atl06.R  icesat2-atl07.R  icesat2-atl08.R  icesat2-atl10.R  icesat2-atl13.R  icesat2-atl24.R
inst/hex/: spacelasrerhex.R
man/: find_gedi.Rd  find_icesat2.Rd  gedi_columns.Rd  grab_gedi.Rd  grab_icesat2.Rd  icesat2_columns.Rd  rust_earthdata_token.Rd  rust_hdf5_dataset.Rd  rust_hdf5_groups.Rd  rust_read_gedi.Rd  rust_read_gedi_multi.Rd  rust_read_icesat2.Rd  rust_read_icesat2_multi.Rd  sl_bbox.Rd  sl_columns.Rd  sl_earthdata_token.Rd  sl_extract_waveforms.Rd  sl_grab.Rd  sl_hdf5_groups.Rd  sl_hdf5_read.Rd  sl_read.Rd  sl_search.Rd  spacelaser-package.Rd
reference/: index.html  index.md  sl_bbox.html  sl_bbox.md  sl_columns.html  sl_columns.md  sl_extract_waveforms.html  sl_extract_waveforms.md  sl_hdf5_groups.html  sl_hdf5_groups.md  sl_hdf5_read.html  sl_hdf5_read.md  sl_read.html  sl_read.md  sl_read.sl_gedi_search.html  sl_search.html  sl_search.md  spacelaser-package.html  spacelaser-package.md  spacelaser.html
src/: Makevars  Makevars.in  Makevars.win  Makevars.win.in  entrypoint.c  lib.rs
src/hdf5/: dataset.rs  file.rs  heap.rs  mod.rs  object_header.rs  types.rs
src/io/: cache.rs  source.rs
src/rust/: Cargo.toml  document.rs
src/rust/src/: auth.rs  ffi.rs  lib.rs
src/rust/src/filters/: mod.rs
src/rust/src/hdf5/: btree.rs  chunk.rs  dataset.rs  file.rs  heap.rs  object_header.rs  superblock.rs  types.rs
src/rust/src/io/: cache.rs  mod.rs  reader.rs  source.rs
src/rust/src/products/: common.rs  gedi.rs  icesat2.rs  mod.rs
tests/: testthat.R
tests/testthat/: helper-fixtures.R  helper-integration.R  helper-mock.R  test-auth.R  test-column-ordering.R  test-columns.R  test-convert-time.R  test-cross-beam-option.R  test-hdf5-helpers.R  test-integration-gedi-l1b.R  test-integration-gedi-l2b.R  test-integration-gedi-l4a.R  test-integration-gedi-l4c.R  (+16 more)
vignettes/: gedi-l1b-waveforms.Rmd
(+75 files in other folders)
