[project]
name = "spacelaser-bench-h5coro"
version = "0.1.0"
description = "h5coro pipeline for the spacelaser benchmark"
requires-python = ">=3.10,<3.13"
dependencies = [
    "h5coro>=0.1.0",
    "numpy>=1.24",
    "pandas>=2.0",
    # pandas needs an engine to write parquet; pyarrow is the safer
    # cross-platform pick (fastparquet has compilation-from-source
    # quirks on some OS / Python combinations).
    "pyarrow>=15",
]
