[package]
name = "spacelaser"
version = "0.1.0"
edition = "2021"
description = "Cloud-optimized partial HDF5 reader for GEDI and ICESat-2 satellite data"
license = "MIT"

[lib]
crate-type = ["staticlib", "lib"]

[features]
default = []
r-ffi = ["extendr-api"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }

# HTTP client with range request support
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }

# Decompression
flate2 = "1"

# Byte manipulation
bytes = "1"

# Async stream combinators (buffered parallel fetches)
futures = "0.3"

# Error handling
thiserror = "2"

# Caching
lru = "0.12"

# Logging
log = "0.4"

# R interop (only when building as R package)
extendr-api = { version = "0.7", optional = true }

# Serialization for FFI data transfer
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros", "test-util"] }

[profile.release]
lto = true
codegen-units = 1
