[package]
name = 'spacelaser'
publish = false
version = '0.1.0'
edition = '2021'
rust-version = '1.65'

[lib]
crate-type = [ 'rlib', 'staticlib' ]
name = 'spacelaser'

[[bin]]
name = 'document'
path = 'document.rs'

[dependencies]
extendr-api = '0.9.0'
# Async runtime
tokio = { version = "1", features = ["rt", "macros", "time"] }

# HTTP client with range request support
reqwest = { version = "0.12", features = ["rustls-tls", "cookies"], default-features = false }

# Decompression
flate2 = "1"

# Byte manipulation
bytes = "1"

# Async stream combinators (buffered parallel fetches)
futures = "0.3"

# Error handling
thiserror = "2"

# Caching
lru = "0.12"

# Logging
log = "0.4"

# Serialization for FFI data transfer
serde_json = "1"

[profile.release]
lto = true
codegen-units = 1
